# are

./: .gitignore  code-stats.sh
are-world/: Cargo.toml  are.toml
are-world/src/: are.toml  main.rs  todo.txt
are-world/src/arena/: angelos.rs  conf.rs  cosmos.rs  cosmos_ripper.rs  deamon.rs  defs.rs  god.rs  meta.rs  mod.rs  ref.rs  singletons.rs  stat.rs  types.rs
are-world/src/arena/body/: body.rs  element.rs  mod.rs
are-world/src/arena/conf/: bio.rs  corpse.rs  game.rs  gen.rs  log.rs  mod.rs  plant.rs  runtime.rs
are-world/src/arena/gnd/: element.rs  environment.rs  gmsg.rs  gnd.rs  gorder.rs  mod.rs  plant.rs  terrain.rs
are-world/src/arena/messages/: message.rs  mod.rs
are-world/src/arena/mind/: mind.rs  mod.rs
are-world/src/arena/mob/: mmsg.rs  mob.rs  mod.rs  morder.rs
are-world/src/arena/observe/: logger.rs  mod.rs  plate.rs  species.rs
are-world/src/arena/ref/: mod.rs
are-world/src/conencode/: conencoder.rs  mod.rs  nvt.rs
are-world/src/cui/: color.rs  mod.rs  monitor.rs  screen.rs  window.rs
are-world/src/grids/: coord.rs  coord_interval.rs  interval.rs  isizeconv.rs  mod.rs
are-world/src/grids/matrix/: access.rs  area.rs  fast.rs  fast_full.rs  fmt.rs  iter.rs  mapping.rs  matrix.rs  mod.rs  (+5 more)
are-world/src/jobs/: mod.rs  workers.rs
are-world/src/likely/: mod.rs
are-world/src/lock/: spinlock.rs
are-world/src/math/: functions.rs  matrix.rs  mod.rs  noise.rs
are-world/src/msgpip/: chunkpipe.rs  mod.rs  pipe.rs
are-world/src/stats/: benchmark.rs  bm2.rs  chart.rs  counter.rs  mod.rs
are-world/src/sword/: mod.rs  sword.rs
(+22 files in other folders)
