[package]
name = "are-world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
# serde_with = { version = "1.14", features = ["base64"]}
serde_json = "1.0"
duplicate = "0.4"
rand = "0.8"
# rc-box = "1.2"
toml = "0.5.9"
